Adds support and feedback

--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-StatusWidgets
+<!-- Create an HTML page with boostrap 5 CDN  -->
+<!DOCTYPE html>
+<html lang="en" class="h-100">
+
+<head>
+    <meta charset="utf-8">
+    <title>StatusWidgets</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link crossorigin="anonymous"
+          href="css/bootstrap.min.css"
+          referrerpolicy="no-referrer" rel="stylesheet"/>
+    <script defer src="/js/bootstrap.min.js"></script>
+</head>
+
+<body class="d-flex flex-column h-100">
+<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <div class="container">
+
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+            <span class="fs-4">Simple header</span>
+        </a>
+    </div>
+</header>
+<div class="container">
+</div>
+<header>
+    <div class="container">
+        <h1 class="mt-4 mb-5 display-3">StatusWidgets</h1>
+    </div>
+</header>
+<div class="container">
+
+    <section id="support" class="mb-5">
+        <h2>Support</h2>
+
+        <p>
+            If you have any questions or feedback, please get in touch.
+        </p>
+
+        <a href="https://forms.gle/e9VWcWFQW7rMnjJc7" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Support Form</a>
+    </section>
+
+    <hr />
+
+    <section id="privacy" class="mb-5">
+        <h2>Privacy Policy</h2>
+        <div>
+            <p>
+                This Privacy Policy outlines how StatusWidgets handles data. Please note the following:
+            </p>
+            <p>
+            Data Collection:<br/>
+StatusWidgets does not collect any personal information or user data from its users.
+            </p>
+            <p>
+
+            Third-Party Service Providers:<br/>
+StatusWidgets does not integrate any third-party service providers or APIs within the app.
+            </p>
+            <p>
+
+            Advertising and Analytics:<br/>
+StatusWidgets does not display any advertisements or use any analytics services.
+            </p>
+            <p>
+
+            Data Security: <br/>
+As there is no data collection, storage, or transmission, no specific data security measures are required.
+            </p>
+            <p>
+
+            User Consent:<br/>
+Since no data is collected, user consent is not applicable.
+            </p>
+            <p>
+
+            User Rights:<br/>
+As no data is collected, users do not have specific rights related to their personal information.
+            </p>
+            <p>
+
+            Policy Updates:<br/>
+We do not anticipate any changes to this Privacy Policy. However, if updates are made in the future, users will not be notified as no user data is collected or processed.
+            </p>
+        </div>
+    </section>
+
+
+
+
+</div>
+
+<footer class="footer mt-auto py-3 bg-body-tertiary">
+    <div class="container">
+        <p>© 2023 Ian Leon</p>
+    </div>
+</footer>
+
+</body>
+
+</html>
